apps/element/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: element-livekit-strip
  namespace: element
spec:
  stripPrefix:
    prefixes:
      - /livekit/sfu
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: element-rtc-auth-strip
  namespace: element
spec:
  stripPrefix:
    prefixes:
      - /livekit/jwt
